문장분석 후 나오는 단어를 눌러 사전으로 연결하는 부분에서 특정 폰에서 크래쉬발생, 일단 크래쉬 유발하는 함수를 우회하여 일단 소스 안정화(원인을 모르니 다소 맘에 안듦)

--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -3531,6 +3531,10 @@
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UNv-vj-7cJ">
                                                                     <rect key="frame" x="20" y="0.0" width="35" height="36"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" priority="250" constant="80" id="3qb-pc-kxR"/>
+                                                                        <constraint firstAttribute="height" constant="40" id="JMJ-oB-EEd"/>
+                                                                    </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -3605,7 +3609,7 @@
     </scenes>
     <designables>
         <designable name="pVQ-02-xFM">
-            <size key="intrinsicContentSize" width="175.5" height="20.5"/>
+            <size key="intrinsicContentSize" width="191.5" height="28.5"/>
         </designable>
     </designables>
     <resources>
