--- a/AI_MUNJANG/Base.lproj/Main.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main.storyboard
@@ -214,6 +214,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4hw-Sf-7Er" userLabel="dummy">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmb-LB-92t">
                                 <rect key="frame" x="0.0" y="44" width="414" height="240"/>
                                 <subviews>
@@ -277,7 +281,7 @@
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JGe-er-fM7">
                                 <rect key="frame" x="0.0" y="292" width="414" height="570"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1QY-r4-L5z">
                                     <size key="itemSize" width="100" height="80"/>
                                     <size key="estimatedItemSize" width="100" height="80"/>
@@ -341,13 +345,17 @@
                         <viewLayoutGuide key="safeArea" id="zPv-xb-wr2"/>
                         <color key="backgroundColor" red="0.96862745098039216" green="0.97647058823529409" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="4hw-Sf-7Er" firstAttribute="leading" secondItem="lmb-LB-92t" secondAttribute="leading" id="2OI-7W-58A"/>
                             <constraint firstItem="zPv-xb-wr2" firstAttribute="bottom" secondItem="JGe-er-fM7" secondAttribute="bottom" id="Aor-Gs-Jvs"/>
+                            <constraint firstAttribute="trailing" secondItem="4hw-Sf-7Er" secondAttribute="trailing" id="Aqa-Ks-zsn"/>
                             <constraint firstItem="lmb-LB-92t" firstAttribute="top" secondItem="zPv-xb-wr2" secondAttribute="top" id="P8q-JW-ITT"/>
                             <constraint firstItem="JGe-er-fM7" firstAttribute="leading" secondItem="zPv-xb-wr2" secondAttribute="leading" id="PcQ-h3-Hvy"/>
                             <constraint firstItem="JGe-er-fM7" firstAttribute="top" secondItem="lmb-LB-92t" secondAttribute="bottom" constant="8" id="YKc-eV-mSK"/>
                             <constraint firstItem="lmb-LB-92t" firstAttribute="leading" secondItem="zPv-xb-wr2" secondAttribute="leading" id="Ymx-Vg-23p"/>
                             <constraint firstItem="zPv-xb-wr2" firstAttribute="trailing" secondItem="JGe-er-fM7" secondAttribute="trailing" id="m5z-gb-gDR"/>
                             <constraint firstItem="zPv-xb-wr2" firstAttribute="trailing" secondItem="lmb-LB-92t" secondAttribute="trailing" id="njE-pU-S2L"/>
+                            <constraint firstItem="lmb-LB-92t" firstAttribute="top" secondItem="4hw-Sf-7Er" secondAttribute="bottom" id="pM3-v7-1wg"/>
+                            <constraint firstItem="4hw-Sf-7Er" firstAttribute="top" secondItem="fPB-Iy-TNh" secondAttribute="top" id="wvy-03-Mz7"/>
                         </constraints>
                     </view>
                     <connections>
@@ -2762,6 +2770,15 @@
                                 <action selector="clickedStartMission:" destination="OMf-Fe-WXr" eventType="touchUpInside" id="HvD-uX-ai9"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bq3-E6-maQ">
+                            <rect key="frame" x="8" y="50" width="32" height="32"/>
+                            <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="icArrowLeft32Px"/>
+                            <connections>
+                                <action selector="clickedBack:" destination="OMf-Fe-WXr" eventType="touchUpInside" id="sho-Zx-cbl"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <viewLayoutGuide key="safeArea" id="uay-Ok-6LM"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -2770,8 +2787,10 @@
                         <constraint firstItem="AHD-vx-C9G" firstAttribute="leading" secondItem="uay-Ok-6LM" secondAttribute="leading" constant="20" id="Aov-a1-oN5"/>
                         <constraint firstItem="h7V-if-B8x" firstAttribute="top" secondItem="uay-Ok-6LM" secondAttribute="top" constant="60" id="LnE-7O-XgO"/>
                         <constraint firstItem="uay-Ok-6LM" firstAttribute="trailing" secondItem="h7V-if-B8x" secondAttribute="trailing" constant="20" id="UTD-GT-x9P"/>
+                        <constraint firstItem="Bq3-E6-maQ" firstAttribute="leading" secondItem="uay-Ok-6LM" secondAttribute="leading" constant="8" id="eZW-vP-Ect"/>
                         <constraint firstItem="h7V-if-B8x" firstAttribute="leading" secondItem="uay-Ok-6LM" secondAttribute="leading" constant="20" id="ifr-ZM-8O5"/>
                         <constraint firstItem="AHD-vx-C9G" firstAttribute="top" secondItem="h7V-if-B8x" secondAttribute="bottom" constant="20" id="n6b-Oo-0Sq"/>
+                        <constraint firstItem="Bq3-E6-maQ" firstAttribute="top" secondItem="USC-ll-v7E" secondAttribute="top" constant="50" id="odo-ny-I38"/>
                         <constraint firstItem="JvM-A9-A1d" firstAttribute="centerX" secondItem="USC-ll-v7E" secondAttribute="centerX" id="pkb-xu-NTH"/>
                         <constraint firstItem="uay-Ok-6LM" firstAttribute="trailing" secondItem="AHD-vx-C9G" secondAttribute="trailing" constant="20" id="vzM-rF-t46"/>
                     </constraints>
